--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <main class="calculator-body">
       <section class="screen">
-        <p class="operations-line">operation</p>
-        <p class="result-line">result</p>
+        <p class="operations-line"></p>
+        <p class="result-line"></p>
       </section>
       <section class="btns">
         <div class="btn-line">
@@ -22,28 +22,29 @@
           <button class="number-btn">7</button>
           <button class="number-btn">8</button>
           <button class="number-btn">9</button>
-          <button class="number-btn">/</button>
+          <button class="divide-btn symbol-btn">/</button>
         </div>
         <div class="btn-line">
           <button class="number-btn">4</button>
           <button class="number-btn">5</button>
           <button class="number-btn">6</button>
-          <button class="number-btn">x</button>
+          <button class="multiply-btn symbol-btn">x</button>
         </div>
         <div class="btn-line">
           <button class="number-btn">1</button>
           <button class="number-btn">2</button>
           <button class="number-btn">3</button>
-          <button class="number-btn">-</button>
+          <button class="minus-btn symbol-btn">-</button>
         </div>
         <div class="btn-line">
-          <button class="number-btn">.</button>
+          <button class="dot-btn">.</button>
           <button class="number-btn">0</button>
-          <button class="number-btn">=</button>
-          <button class="number-btn">+</button>
+          <button class="equal-btn">=</button>
+          <button class="plus-btn symbol-btn">+</button>
         </div>
       </section>
     </main>
+    <footer>by jazsouf</footer>
     <script src="./script.js"></script>
   </body>
 </html>
